--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <!-- Footer -->
     <footer class="bg-primary text-white text-center pb-5">
-      <p>created with <i class="bi bi-hand-thumbs-up-fill text-dark"></i> by <a href="https://github.com/wandieka29/" class="text-white fw-bold">Yoeda septian dwi cahyo</a></p>
+      <p>created with <i class="bi bi-hand-thumbs-up-fill text-dark"></i> by <a href="https://github.com/yudaseptiandwi/" class="text-white fw-bold">Yoeda septian dwi cahyo</a></p>
     </footer>
     <!-- Footer End -->
 
